# SkyrimAE

./: .gitignore  README.md
Data/: TwitchDragonbornLegacy.esp
Data/Interface/Translations/: TwitchDragonbornLegacy_czech.txt  TwitchDragonbornLegacy_english.txt  TwitchDragonbornLegacy_french.txt  TwitchDragonbornLegacy_german.txt  TwitchDragonbornLegacy_italian.txt  TwitchDragonbornLegacy_japanese.txt  TwitchDragonbornLegacy_polish.txt  TwitchDragonbornLegacy_russian.txt  TwitchDragonbornLegacy_spanish.txt
Data/SKSE/Plugins/: TDL_StreamPlugin.ini
Data/Source/Scripts/: TDL_Blessing.psc  TDL_Blessing1.psc  TDL_CameraScriptOnly.psc  TDL_Chaos.psc  TDL_ChaosAliasScript.psc  TDL_Chaos_PlayerAlias.psc  TDL_Comedy.psc  TDL_Creatures.psc  TDL_Effects.psc  TDL_Gigant.psc  TDL_Healing.psc  TDL_Hunter.psc  TDL_InGameMenu.psc  TDL_Inventory.psc  TDL_MCMConfig.psc  TDL_MCM_About.psc  TDL_MCM_Chaos.psc  TDL_MCM_Comedy.psc  TDL_MCM_Gigant.psc  TDL_MCM_Hunter.psc  TDL_MCM_Inventory.psc  TDL_MCM_Stream.psc  TDL_MCM_System.psc  TDL_MCM_Teleport.psc  TDL_MCM_Virus.psc  TDL_MCM_Wrath.psc  TDL_Main.psc  TDL_Main1.psc  TDL_MainController.psc  TDL_MainControllerQuest.psc  TDL_MenuTrigger.psc  TDL_RespawnPatchController.psc  TDL_RespawnPatch_MCM.psc  TDL_RespawnPatch_PlayerAlias.psc  TDL_RespawnPatch_TDLCompat.psc  TDL_SimpleTest.psc  TDL_SlowFall.psc  TDL_Stats.psc  TDL_StatsQuest.psc  TDL_Storm.psc  (+11 more)
Data/TDL/: LEGGIMI.txt  LISEZMOI.txt  Readme-RU.txt  Readme.txt  TDL_AllRanges.txt  send_raw.cmd  send_raw.ps1  send_tdl.ps1  ПРОЧТИ МЕНЯ.txt
Data/TDL/Documentation/: 1_twitch_dragonborn_legacy_nexus_description.md  2_twitch_dragonborn_legacy_installation_and_requirements.md  3_twitch_dragonborn_legacy_faq_and_known_issues.md  4_twitch_dragonborn_legacy_what_this_mod_does_not_do.md  5_twitch_dragonborn_legacy_for_streamer_and_interactive.md  6_twitch_dragonborn_legacy_setting_in_streamer.bot.md  7_twitch_dragonborn_legacy_description_mods_and_stges.md  8_twitch_dragonborn_legacy_changelog_roadmap.md  Test_streamerbot
Data/TDL/config/: TDL_Cooldowns.ini
Data/TDL/tools/: send_line.ps1  send_raw.cmd  send_raw.ps1  send_tdl.cmd
TDL_StreamPlugin/: CMakeLists.txt  CMakeSettings.json  PCH.h  vcpkg-configuration.json  vcpkg.json
TDL_StreamPlugin/src/: TDL_MenuHook.cpp  TDL_MenuHook.h  TDL_PipeServer.cpp  TDL_PipeServer.h  TDL_PipeServer_reload_config.patch  TDL_PipeServer_reload_config_v4_comedy.patch  main.cpp
TDL_StreamPlugin/src/TDL_CustomMenu/: TDL_CustomMenu.as
TDL_StreamPlugin/src/tools/: tdl_send.cpp
